[package]
name = "rbchunk"
version = "2.1.0"
edition = "2021"

description = "Based on bchunk by Heikki Hannikainen <hessu@hes.iki.fi>"
repository = "https://github.com/luxtorpeda-dev/rbchunk"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace.metadata.release]
allow-branch = ["main"]
publish = false
